# asr_portrait

./: .dockerignore  .env  .env.remote  .gitignore  README.md  alembic.ini  check_step1.sh  docker-compose.prod.yml  env.example  env.production.example  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.test-mysql.yml  docker-compose.yml
docs/: 1-项目交维文档V1.txt  backend_summary_report.md  data_architecture.md  data_portrait_feasibility_analysis.md  deployment_guide.md  development_plan.md  feasibility_report.md  frontend_development_plan.md  frontend_readme.md  goal.xlsx  system_architecture_analysis.md
migrations/: env.py
migrations/versions/: 20241204_0001_initial_tables.py
scripts/: build_and_export.sh  check_access.sh  check_source_data.sh  deploy.sh  deploy_remote.sh  diagnose_api.sh  diagnose_deployment.sh  init_db.py  load_demo_data.py  rebuild_data.py  start_all.sh  start_test_mysql.sh  stop_all.sh  verify_deployment.py  verify_deployment.sh
src/: __init__.py  main.py
src/api/: __init__.py  deps.py  router.py
src/core/: __init__.py  config.py  database.py  logging.py
src/models/: __init__.py
src/schemas/: __init__.py  period.py  portrait.py  response.py
src/services/: __init__.py  etl_service.py  llm_service.py  period_service.py  portrait_service.py  rule_engine_service.py
src/tasks/: __init__.py  (+1 more)
tests/: conftest.py  test_cross_month_query.py
web/: .dockerignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+23 files in other folders)
